k8s/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rag-worker
  labels:
    app: rag-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rag-worker
  template:
    metadata:
      labels:
        app: rag-worker
    spec:
      containers:
      - name: worker
        image: orhunkupeli/rag-worker:v1
        imagePullPolicy: Always
